# cinematography-analysis-tools

./: .gitignore  .venv  DEVELOPMENT_LOG.md  README.md  agents.md  get-heatmaps.py  get-preds.py  get_data_model.sh  initialise.py  parse_comments.py  pyproject.toml  test_get_heatmaps.py  test_get_preds.py  test_initialise.py
.jules/: bolt.md  palette.md  sentinel.md
README_imgs/: preds.csv
my_results/: preds.csv
spaces/: app.py  requirements.txt
src/cinematography_analysis_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cinematography_tools/: __init__.py  api.py  charts.py  cli.py  color.py  export_onnx.py  heatmap.py  model.py  performance.py  predict.py  timeline.py  transforms.py  utils.py  video.py
web/: app.js  index.html  style.css
